# iso-27001-audit

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile_tests  README.md  docker-compose.yml  pyproject.toml  readme_javid.md
doc/md/: jwt_validation_architecture_decision.md  python_venv_setup.md
frontend/: App.tsx  README.md  app.json  package-lock.json  package.json
frontend/src/components/: TextInput.tsx
frontend/src/constants/: theme.ts
frontend/src/screens/: LoginScreen.tsx
frontend/src/types/: auth.ts
keycloak/: 9.4_test_keylcloak.md  9.5_role_in_token.md  9.6-multi-tenant.md  Dockerfile  enterprise_grad.md  futuro_security.md  keycloak_dev_documentation_security.md  keycloak_readme.md
keycloak/import/: realm_dev.json
keycloak/realm/: realm_dev.json
src/iso_27001_audit/: main.py
src/iso_27001_audit/api/v1/: health.py  router_wrapper.py  secure.py  secure_multi_tenant.py
src/iso_27001_audit/config/: setting.py
src/iso_27001_audit/db/: gateway.py
src/iso_27001_audit/enums/: membership_role.py
src/iso_27001_audit/logger/: app.py  audit.py  logger_wrapper.py
src/iso_27001_audit/models/: __init__.py  app_user.py  membership.py  model.py  organization.py
src/iso_27001_audit/security/: access_control.py  jwks.py  jwt_validator.py  principal.py
src/iso_27001_audit/utils/logger/: formatters.py  settings.py  setup.py
tests/integration/: test_multi_tenant_rbac.py  test_task_9_4_jwt_validation.py
